--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -58,7 +58,51 @@
                     <div class="col-md-12">
                         <h2>Sobre Nós</h2>
                         <p>O KingDomfy é uma plataforma de streaming de música que oferece milhões de músicas para você ouvir. Nossa missão é levar música para todos, em qualquer lugar.</p>
-                        <p>Fomos fundados em 2023 com a paixão de conectar artistas e fãs. Acreditamos no poder da música para unir pessoas e inspirar momentos inesquecíveis.</p>
+                        <p>Fomos fundados em 2024 com a paixão de conectar artistas e fãs. Acreditamos no poder da música para unir pessoas e inspirar momentos inesquecíveis.</p>
+                        <p class="mt-4"><strong>Missão do Projeto:</strong> Este projeto foi construído com o propósito de demonstrar que interfaces complexas podem ser recriadas com precisão utilizando tecnologias fundamentais da web, servindo de base para estudos de UI/UX e performance.</p>
+                    </div>
+                </div>
+
+                <div class="row mt-5">
+                    <div class="col-md-12">
+                        <h2>Créditos e Reconhecimentos</h2>
+                        <p>O KingDomfy é o resultado de esforço técnico e inspiração em grandes players do mercado. Abaixo, os pilares que tornaram este projeto possível:</p>
+                        <table class="table table-dark table-striped mt-4">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Atribuição</th>
+                                    <th scope="col">Responsável / Recurso</th>
+                                    <th scope="col">Descrição</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Arquitetura & Dev</td>
+                                    <td>DomisDev</td>
+                                    <td>Idealização, estruturação do código e implementação da lógica responsiva.</td>
+                                </tr>
+                                <tr>
+                                    <td>Identidade Visual</td>
+                                    <td>Spotify Inc.</td>
+                                    <td>Referência de Design System, paleta de cores e UX (User Experience).</td>
+                                </tr>
+                                <tr>
+                                    <td>Engine Gráfica</td>
+                                    <td>Bootstrap & CSS3</td>
+                                    <td>Fornecimento dos componentes de layout e estilização moderna.</td>
+                                </tr>
+                                <tr>
+                                    <td>Assets Visuais</td>
+                                    <td>Font Awesome & Devicons</td>
+                                    <td>Ícones de alta fidelidade que compõem a estética da interface.</td>
+                                </tr>
+                                <tr>
+                                    <td>Aprendizado</td>
+                                    <td>Comunidade Dev</td>
+                                    <td>Baseado em princípios de Clean Code e boas práticas de Front-end.</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
