--- a/pages/aplicativo-movel-gratis.html
+++ b/pages/aplicativo-movel-gratis.html
@@ -6,12 +6,6 @@
     <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
-
-    <!-- HTML5Shiv -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <![endif]-->
-
     <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
     <title>KingDomfy - Aplicativo Móvel Grátis</title>
     <link rel="icon" href="../src/imagens/favicon.png">
@@ -57,10 +51,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2>Aplicativo Móvel Grátis</h2>
-                        <p>Leve o KingDomfy com você. Baixe o aplicativo grátis para celular e tablet.</p>
-                        <a href="" class="btn btn-lg btn-custom btn-roxo">
-                          BAIXE O APLICATIVO
-                        </a>
+                        <p>Página em construção. Em breve, você poderá baixar o aplicativo móvel grátis do KingDomfy.</p>
                     </div>
                 </div>
             </div>
