--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -6,12 +6,6 @@
     <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
-
-    <!-- HTML5Shiv -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <![endif]-->
-
     <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
     <title>KingDomfy - Para Artistas</title>
     <link rel="icon" href="../src/imagens/favicon.png">
@@ -57,10 +51,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2>Para Artistas</h2>
-                        <p>Compartilhe sua música com o mundo. O KingDomfy para Artistas te dá as ferramentas para alcançar seus fãs.</p>
-                        <a href="" class="btn btn-lg btn-custom btn-roxo">
-                          SAIBA MAIS
-                        </a>
+                        <p>Página em construção. Em breve, os artistas terão um espaço dedicado no KingDomfy.</p>
                     </div>
                 </div>
             </div>
