--- a/pages/baixar.html
+++ b/pages/baixar.html
@@ -53,16 +53,56 @@
 
     <section class="caixa">
         <div class="container">
-            <div class="conteudo-interno">
+            <div class="conteudo-interno text-center">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>Baixar KingDomfy</h2>
-                        <p>Leve suas músicas para todo lugar. Baixe o KingDomfy no seu celular ou computador.</p>
-                        <a href="" class="btn btn-lg btn-custom btn-roxo">
-                          BAIXAR
+                        <h2>Leve o KingDomfy com você</h2>
+                        <p>Baixe nosso aplicativo para uma experiência completa no seu dispositivo favorito.</p>
+                    </div>
+                </div>
+
+                <div class="row mt-4">
+                    <div class="col-md-4">
+                        <a href="#" class="btn btn-lg btn-custom btn-roxo btn-block">
+                            <i class="fab fa-windows mr-2"></i> Baixar para Windows
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="#" class="btn btn-lg btn-custom btn-dark btn-block">
+                            <i class="fab fa-apple mr-2"></i> Baixar para macOS
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="#" class="btn btn-lg btn-custom btn-secondary btn-block">
+                            <i class="fab fa-linux mr-2"></i> Baixar para Linux
                         </a>
                     </div>
                 </div>
+
+                <div class="row mt-5">
+                    <div class="col-md-12">
+                        <h2>Vantagens do App Desktop</h2>
+                    </div>
+                </div>
+
+                <div class="row mt-4">
+                    <div class="col-md-4">
+                        <i class="fas fa-rocket fa-3x mb-3"></i>
+                        <h4>Melhor Performance</h4>
+                        <p>Nosso aplicativo é otimizado para consumir menos recursos e iniciar mais rápido.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <i class="fas fa-cloud-download-alt fa-3x mb-3"></i>
+                        <h4>Modo Offline</h4>
+                        <p>Baixe suas playlists favoritas e ouça em qualquer lugar, sem precisar de internet.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <i class="fas fa-sliders-h fa-3x mb-3"></i>
+                        <h4>Integração Nativa</h4>
+                        <p>Controle a reprodução com as teclas de mídia do seu teclado e receba notificações.</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
