--- a/pages/empregos.html
+++ b/pages/empregos.html
@@ -6,12 +6,6 @@
     <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
-
-    <!-- HTML5Shiv -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <![endif]-->
-
     <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
     <title>KingDomfy - Empregos</title>
     <link rel="icon" href="../src/imagens/favicon.png">
@@ -56,11 +50,8 @@
             <div class="conteudo-interno">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>Trabalhe Conosco</h2>
-                        <p>Faça parte da nossa equipe e ajude a construir o futuro da música.</p>
-                        <a href="" class="btn btn-lg btn-custom btn-roxo">
-                          VER VAGAS
-                        </a>
+                        <h2>Empregos</h2>
+                        <p>Página em construção. Volte em breve para conferir as oportunidades de carreira no KingDomfy!</p>
                     </div>
                 </div>
             </div>
@@ -134,7 +125,7 @@
               </li>
               <li>
                 <a href="">
-                  <img src="../src/imagens/instagram.png" class="social-icon">
+                  <img src="../src/imagens/instagram.png" class->
                 </a>
               </li>
             </ul>
