--- a/pages/imprensa.html
+++ b/pages/imprensa.html
@@ -6,12 +6,6 @@
     <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
-
-    <!-- HTML5Shiv -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <![endif]-->
-
     <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
     <title>KingDomfy - Imprensa</title>
     <link rel="icon" href="../src/imagens/favicon.png">
@@ -57,7 +51,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2>Imprensa</h2>
-                        <p>Para consultas de imprensa, entre em contato com nossa equipe de comunicação.</p>
+                        <p>Página em construção. Volte em breve para conferir as novidades e releases para a imprensa.</p>
                     </div>
                 </div>
             </div>
