--- a/pages/novidades.html
+++ b/pages/novidades.html
@@ -6,12 +6,6 @@
     <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
-
-    <!-- HTML5Shiv -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <![endif]-->
-
     <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
     <title>KingDomfy - Novidades</title>
     <link rel="icon" href="../src/imagens/favicon.png">
@@ -57,7 +51,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2>Novidades</h2>
-                        <p>Fique por dentro das últimas notícias e atualizações do KingDomfy.</p>
+                        <p>Página em construção. Volte em breve para ficar por dentro de todas as novidades do KingDomfy!</p>
                     </div>
                 </div>
             </div>
