--- a/pages/player-da-web.html
+++ b/pages/player-da-web.html
@@ -6,12 +6,6 @@
     <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
-
-    <!-- HTML5Shiv -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <![endif]-->
-
     <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
     <title>KingDomfy - Player da Web</title>
     <link rel="icon" href="../src/imagens/favicon.png">
@@ -57,10 +51,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2>Player da Web</h2>
-                        <p>Ouça o KingDomfy diretamente no seu navegador. Não é preciso baixar nada.</p>
-                        <a href="" class="btn btn-lg btn-custom btn-roxo">
-                          ABRIR PLAYER DA WEB
-                        </a>
+                        <p>Página em construção. Em breve, você poderá ouvir suas músicas diretamente do navegador.</p>
                     </div>
                 </div>
             </div>
