--- a/pages/premium.html
+++ b/pages/premium.html
@@ -53,16 +53,73 @@
 
     <section class="caixa">
         <div class="container">
-            <div class="conteudo-interno">
+            <div class="conteudo-interno text-center">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>KingDomfy Premium</h2>
+                        <h2>Experimente o Premium e transforme sua experiência musical.</h2>
                         <p>Ouça música sem anúncios, offline e com qualidade de som superior.</p>
-                        <a href="" class="btn btn-lg btn-custom btn-roxo">
-                          ASSINE O PREMIUM
+                        <a href="" class="btn btn-lg btn-custom btn-roxo mt-3">
+                          COMECE SEU TESTE GRÁTIS
                         </a>
+                        <p class="mt-3"><small>Oferta válida apenas para novos assinantes. Sujeito a termos e condições.</small></p>
                     </div>
                 </div>
+
+                <div class="row mt-5">
+                    <div class="col-md-10 mx-auto">
+                        <h2>Por que ser Premium?</h2>
+                        <table class="table table-dark table-striped mt-4">
+                            <thead>
+                                <tr class="text-center">
+                                    <th scope="col">Recurso</th>
+                                    <th scope="col">KingDomfy Free</th>
+                                    <th scope="col">KingDomfy Premium</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Música sem anúncios</td>
+                                    <td class="text-center"><i class="fas fa-times text-danger"></i></td>
+                                    <td class="text-center"><i class="fas fa-check text-success"></i></td>
+                                </tr>
+                                <tr>
+                                    <td>Modo Offline</td>
+                                    <td class="text-center"><i class="fas fa-times text-danger"></i></td>
+                                    <td class="text-center"><i class="fas fa-check text-success"></i></td>
+                                </tr>
+                                <tr>
+                                    <td>Pular faixas ilimitadamente</td>
+                                    <td class="text-center">Limitado</td>
+                                    <td class="text-center"><i class="fas fa-check text-success"></i></td>
+                                </tr>
+                                <tr>
+                                    <td>Qualidade de áudio</td>
+                                    <td class="text-center">Padrão</td>
+                                    <td class="text-center">Alta Fidelidade</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <div class="row mt-5">
+                    <div class="col-md-4">
+                        <i class="fas fa-download fa-3x mb-3"></i>
+                        <h4>Baixe suas músicas</h4>
+                        <p>Ouça em qualquer lugar, mesmo sem conexão com a internet.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <i class="fas fa-volume-mute fa-3x mb-3"></i>
+                        <h4>Sem interrupções</h4>
+                        <p>Curta suas músicas favoritas sem anúncios para atrapalhar.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <i class="fas fa-random fa-3x mb-3"></i>
+                        <h4>Pule o quanto quiser</h4>
+                        <p>Navegue livremente pelas suas playlists e descubra novos sons.</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
