--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-auto mb-4">
-            <h4>company</h4>
+            <h4>Company</h4>
             <ul class="navbar-nav">
               <li><a href="pages/sobre.html">Sobre</a></li>
               <li><a href="pages/empregos.html">Empregos</a></li>
@@ -158,7 +158,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>comunidades</h4>
+            <h4>Comunidades</h4>
             <ul class="navbar-nav">
               <li><a href="pages/artistas.html">Artistas</a></li>
               <li><a href="pages/desenvolvedores.html">Desenvolvedores</a></li>
@@ -166,7 +166,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>Links úteis</h4>
+            <h4>Links Úteis</h4>
             <ul class="navbar-nav">
               <li><a href="pages/suporte.html">Suporte</a></li>
               <li><a href="pages/player-da-web.html">Player da Web</a></li>
@@ -174,7 +174,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>site feito com:</h4>
+            <h4>Site feito com:</h4>
             <ul id="media">
               <li>
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco devicon-img" />
@@ -188,7 +188,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>site feito por:</h4>
+            <h4>Site feito por:</h4>
             <ul class="navbar-nav">
               <li>
                 <a href="https://github.com/Domisnnet/" target="_blank" class="navbar-link externo" id="dev">
@@ -201,17 +201,17 @@
             <h4>Redes Sociais:</h4>
             <ul class="social-media-icons">
               <li>
-                <a href="">
+                <a href="#">
                   <img src="src/imagens/facebook.png" class="social-icon">
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <img src="src/imagens/twitter.png" class="social-icon">
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <img src="src/imagens/instagram.png" class="social-icon">
                 </a>
               </li>
