--- a/pages/imprensa.html
+++ b/pages/imprensa.html
@@ -51,7 +51,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2>Imprensa</h2>
-                        <p>Página em construção. Volte em breve para conferir as novidades e releases para a imprensa.</p>
+                        <p>Página em construção. Volte em breve para encontrar comunicados de imprensa e outros recursos para a mídia.</p>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-auto mb-4">
-            <h4>company</h4>
+            <h4>Company</h4>
             <ul class="navbar-nav">
               <li><a href="sobre.html">Sobre</a></li>
               <li><a href="empregos.html">Empregos</a></li>
@@ -71,7 +71,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>comunidades</h4>
+            <h4>Comunidades</h4>
             <ul class="navbar-nav">
               <li><a href="artistas.html">Artistas</a></li>
               <li><a href="desenvolvedores.html">Desenvolvedores</a></li>
@@ -79,7 +79,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>Links úteis</h4>
+            <h4>Links Úteis</h4>
             <ul class="navbar-nav">
               <li><a href="suporte.html">Suporte</a></li>
               <li><a href="player-da-web.html">Player da Web</a></li>
@@ -87,7 +87,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>site feito com:</h4>
+            <h4>Site feito com:</h4>
             <ul id="media">
               <li>
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco devicon-img" />
@@ -101,7 +101,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>site feito por:</h4>
+            <h4>Site feito por:</h4>
             <ul class="navbar-nav">
               <li>
                 <a href="https://github.com/Domisnnet/" target="_blank" class="navbar-link externo" id="dev">
@@ -114,17 +114,17 @@
             <h4>Redes Sociais:</h4>
             <ul class="social-media-icons">
               <li>
-                <a href="">
+                <a href="#">
                   <img src="../src/imagens/facebook.png" class="social-icon">
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <img src="../src/imagens/twitter.png" class="social-icon">
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <img src="../src/imagens/instagram.png" class="social-icon">
                 </a>
               </li>
