--- a/pages/aplicativo-movel-gratis.html
+++ b/pages/aplicativo-movel-gratis.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
     <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
-    <title>KingDomfy - Aplicativo Móvel</title>
+    <title>KingDomfy - Aplicativo Móvel Grátis</title>
     <link rel="icon" href="../src/imagens/favicon.png">
   </head>
 
@@ -47,12 +47,12 @@
 
     <section class="caixa">
         <div class="container">
-            <div class="conteudo-interno">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2>Aplicativo Móvel Grátis</h2>
-                        <p>Página em construção. Em breve, você poderá baixar o aplicativo móvel do KingDomfy para iOS e Android.</p>
-                    </div>
+            <div class="conteudo-interno text-center">
+                <h2 class="mb-4">Leve o KingDomfy com Você</h2>
+                <p class="lead">Nosso aplicativo móvel está a caminho! Em breve, você poderá baixar o KingDomfy em seu dispositivo e curtir suas músicas favoritas de onde estiver. Continue nos acompanhando para não perder o lançamento.</p>
+                <div class="mt-5">
+                    <i class="fas fa-mobile-alt fa-5x text-white"></i>
+                    <p class="mt-4">O KingDomfy na palma da sua mão.</p>
                 </div>
             </div>
         </div>
