--- a/pages/empregos.html
+++ b/pages/empregos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
     <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
-    <title>KingDomfy - Empregos</title>
+    <title>KingDomfy - Trabalhe Conosco</title>
     <link rel="icon" href="../src/imagens/favicon.png">
   </head>
 
@@ -49,9 +49,20 @@
         <div class="container">
             <div class="conteudo-interno">
                 <div class="row">
-                    <div class="col-md-12">
-                        <h2>Empregos</h2>
-                        <p>Página em construção. Volte em breve para conferir as oportunidades de carreira no KingDomfy.</p>
+                    <div class="col-md-12 text-center">
+                        <h2 class="mb-4">Junte-se à Nossa Comunidade</h2>
+                        <p class="lead">O KingDomfy é um projeto de código aberto movido pela paixão por música e tecnologia. Embora não tenhamos vagas de emprego tradicionais, estamos sempre em busca de talentos para colaborar e fazer a diferença.</p>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-md-6">
+                        <h2>Por Que Colaborar?</h2>
+                        <p>Ao contribuir com o KingDomfy, você ganha experiência prática, trabalha com tecnologias modernas e ajuda a construir uma plataforma que pode ser usada por milhares de pessoas. É a oportunidade perfeita para aprimorar suas habilidades e expandir seu portfólio.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Como Ajudar?</h2>
+                        <p>Você pode contribuir de várias formas: desenvolvendo novas funcionalidades, corrigindo bugs, melhorando a documentação ou até mesmo sugerindo ideias. Visite nosso repositório no GitHub para ver como começar a colaborar hoje mesmo!</p>
+                        <a href="https://github.com/Domisnnet/KingDomfy" class="btn btn-custom btn-roxo" target="_blank">Visitar GitHub</a>
                     </div>
                 </div>
             </div>
