--- a/pages/player-da-web.html
+++ b/pages/player-da-web.html
@@ -47,12 +47,12 @@
 
     <section class="caixa">
         <div class="container">
-            <div class="conteudo-interno">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2>Player da Web</h2>
-                        <p>Página em construção. Em breve, você poderá ouvir suas músicas favoritas diretamente do seu navegador.</p>
-                    </div>
+            <div class="conteudo-interno text-center">
+                <h2 class="mb-4">Player da Web</h2>
+                <p class="lead">Em breve, você poderá ouvir suas músicas favoritas diretamente no navegador. Nosso player da web está em desenvolvimento e será lançado em breve. Fique atento!</p>
+                <div class="mt-5">
+                    <i class="fas fa-music fa-5x text-white"></i>
+                    <p class="mt-4">O som está chegando...</p>
                 </div>
             </div>
         </div>
