--- a/pages/artistas.html
+++ b/pages/artistas.html
@@ -49,9 +49,19 @@
         <div class="container">
             <div class="conteudo-interno">
                 <div class="row">
-                    <div class="col-md-12">
-                        <h2>Para Artistas</h2>
-                        <p>Página em construção. Em breve, os artistas terão um espaço dedicado no KingDomfy.</p>
+                    <div class="col-md-12 text-center">
+                        <h2 class="mb-4">Para Artistas</h2>
+                        <p class="lead">O KingDomfy será a sua plataforma para alcançar milhões de fãs. Embora ainda estejamos em desenvolvimento, queremos que você saiba o que estamos preparando para o futuro.</p>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-md-6">
+                        <h2>Sua Música, Seu Palco</h2>
+                        <p>No futuro, o KingDomfy oferecerá ferramentas para que você possa enviar suas músicas, personalizar seu perfil e se conectar com seus ouvintes. Queremos dar a você o controle total sobre a sua arte.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Fique Atento!</h2>
+                        <p>Estamos trabalhando para criar a melhor experiência para artistas. Assim que a funcionalidade estiver disponível, você será o primeiro a saber. Continue acompanhando nossas novidades para não perder nenhuma atualização!</p>
                     </div>
                 </div>
             </div>
