--- a/pages/desenvolvedores.html
+++ b/pages/desenvolvedores.html
@@ -6,12 +6,6 @@
     <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
-
-    <!-- HTML5Shiv -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <![endif]-->
-
     <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
     <title>KingDomfy - Para Desenvolvedores</title>
     <link rel="icon" href="../src/imagens/favicon.png">
@@ -55,12 +49,26 @@
         <div class="container">
             <div class="conteudo-interno">
                 <div class="row">
-                    <div class="col-md-12">
-                        <h2>Para Desenvolvedores</h2>
-                        <p>Crie experiências incríveis com a nossa API. A plataforma KingDomfy para Desenvolvedores te dá acesso a milhões de músicas.</p>
-                        <a href="" class="btn btn-lg btn-custom btn-roxo">
-                          COMECE A CRIAR
-                        </a>
+                    <div class="col-md-12 text-center">
+                        <h2 class="mb-4">Para Desenvolvedores</h2>
+                        <p class="lead">Bem-vindo à comunidade de desenvolvedores do KingDomfy! Este é o lugar onde a mágica acontece. Se você é apaixonado por código e música, está no lugar certo.</p>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-md-4">
+                        <h2>Como Contribuir</h2>
+                        <p>O KingDomfy é um projeto de código aberto, e sua contribuição é muito bem-vinda. Você pode nos ajudar a corrigir bugs, desenvolver novas funcionalidades ou melhorar a documentação. Confira nosso repositório no GitHub para começar.</p>
+                        <a href="https://github.com/Domisnnet/KingDomfy" class="btn btn-custom btn-roxo" target="_blank">Ver no GitHub</a>
+                    </div>
+                    <div class="col-md-4">
+                        <h2>Documentação da API</h2>
+                        <p>No futuro, planejamos lançar uma API pública para que você possa criar suas próprias integrações com o KingDomfy. A documentação estará disponível aqui assim que for finalizada. Fique atento para mais detalhes!</p>
+                        <a href="#" class="btn btn-custom btn-branco disabled">Acessar Documentação (Em Breve)</a>
+                    </div>
+                    <div class="col-md-4">
+                        <h2>Diretrizes</h2>
+                        <p>Para garantir a qualidade e a consistência do projeto, pedimos que siga nossas diretrizes de contribuição. Elas incluem padrões de codificação, processos de pull request e outras informações importantes para colaborar de forma eficaz.</p>
+                        <a href="https://github.com/Domisnnet/KingDomfy/blob/main/CONTRIBUTING.md" class="btn btn-custom btn-roxo" target="_blank">Ler Diretrizes</a>
                     </div>
                 </div>
             </div>
@@ -71,7 +79,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-auto mb-4">
-            <h4>company</h4>
+            <h4>Company</h4>
             <ul class="navbar-nav">
               <li><a href="sobre.html">Sobre</a></li>
               <li><a href="empregos.html">Empregos</a></li>
@@ -80,7 +88,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>comunidades</h4>
+            <h4>Comunidades</h4>
             <ul class="navbar-nav">
               <li><a href="artistas.html">Artistas</a></li>
               <li><a href="desenvolvedores.html">Desenvolvedores</a></li>
@@ -88,7 +96,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>Links úteis</h4>
+            <h4>Links Úteis</h4>
             <ul class="navbar-nav">
               <li><a href="suporte.html">Suporte</a></li>
               <li><a href="player-da-web.html">Player da Web</a></li>
@@ -96,7 +104,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>site feito com:</h4>
+            <h4>Site feito com:</h4>
             <ul id="media">
               <li>
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco devicon-img" />
@@ -110,7 +118,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>site feito por:</h4>
+            <h4>Site feito por:</h4>
             <ul class="navbar-nav">
               <li>
                 <a href="https://github.com/Domisnnet/" target="_blank" class="navbar-link externo" id="dev">
@@ -123,17 +131,17 @@
             <h4>Redes Sociais:</h4>
             <ul class="social-media-icons">
               <li>
-                <a href="">
+                <a href="#">
                   <img src="../src/imagens/facebook.png" class="social-icon">
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <img src="../src/imagens/twitter.png" class="social-icon">
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <img src="../src/imagens/instagram.png" class="social-icon">
                 </a>
               </li>
