--- a/pages/imprensa.html
+++ b/pages/imprensa.html
@@ -49,9 +49,28 @@
         <div class="container">
             <div class="conteudo-interno">
                 <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h2 class="mb-4">Sala de Imprensa</h2>
+                        <p class="lead">Bem-vindo à nossa sala de imprensa. Aqui você encontrará as últimas notícias, anúncios e atualizações sobre o KingDomfy. Fique por dentro de tudo o que acontece no nosso projeto de código aberto.</p>
+                    </div>
+                </div>
+                <div class="row mt-5">
                     <div class="col-md-12">
-                        <h2>Imprensa</h2>
-                        <p>Página em construção. Volte em breve para encontrar comunicados de imprensa e outros recursos para a mídia.</p>
+                        <h2 class="text-center mb-4">Últimas Notícias</h2>
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Lançamento do Novo Rodapé!</h5>
+                                <p class="card-text">Recentemente, atualizamos o rodapé de todo o site, trazendo um design mais moderno, links funcionais e uma melhor organização das informações. Esta é mais uma etapa na nossa jornada para aprimorar a experiência do usuário.</p>
+                                <p class="card-text"><small class="text-muted">Publicado em: Outubro de 2023</small></p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Próximos Passos</h5>
+                                <p class="card-text">Estamos trabalhando em novas funcionalidades, incluindo a implementação de um player de música funcional e a criação de páginas de comunidade mais interativas. Fique ligado para mais novidades em breve!</p>
+                                <p class="card-text"><small class="text-muted">Publicado em: Outubro de 2023</small></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
