--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -49,9 +49,19 @@
         <div class="container">
             <div class="conteudo-interno">
                 <div class="row">
-                    <div class="col-md-12">
-                        <h2>Para Marcas</h2>
-                        <p>Página em construção. Em breve, as marcas encontrarão aqui informações sobre como anunciar e colaborar com o KingDomfy.</p>
+                    <div class="col-md-12 text-center">
+                        <h2 class="mb-4">Para Marcas</h2>
+                        <p class="lead">Conecte-se com uma comunidade vibrante de amantes de música e tecnologia. O KingDomfy, no futuro, oferecerá um espaço único para sua marca alcançar um público engajado e diversificado.</p>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-md-6">
+                        <h2>Por Que Anunciar Conosco?</h2>
+                        <p>Anunciar no KingDomfy significará mais do que apenas exibir sua marca. Será uma oportunidade de se associar a um projeto de código aberto que valoriza a inovação e a criatividade. Em breve, ofereceremos formatos de anúncio que se integrarão de forma nativa à experiência do usuário.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Entre em Contato</h2>
+                        <p>Se você tem interesse em futuras parcerias, entre em contato conosco. Estamos abertos a discutir ideias e explorar como sua marca pode crescer com o KingDomfy. Envie um e-mail para <a href="mailto:parcerias@kingdomfy.com">parcerias@kingdomfy.com</a>.</p>
                     </div>
                 </div>
             </div>
