--- a/pages/novidades.html
+++ b/pages/novidades.html
@@ -49,9 +49,28 @@
         <div class="container">
             <div class="conteudo-interno">
                 <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h2 class="mb-4">Novidades e Atualizações</h2>
+                        <p class="lead">Acompanhe as últimas notícias e o progresso do KingDomfy. Aqui, compartilhamos o que há de novo, o que estamos melhorando e quais são os próximos passos do projeto.</p>
+                    </div>
+                </div>
+                <div class="row mt-5">
                     <div class="col-md-12">
-                        <h2>Novidades</h2>
-                        <p>Página em construção. Em breve, você encontrará aqui as últimas novidades e atualizações do KingDomfy.</p>
+                        <h2 class="text-center mb-4">Blog do Desenvolvedor</h2>
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Melhorias no Rodapé e Navegação</h5>
+                                <p class="card-text">Implementamos um rodapé totalmente novo, com links funcionais e um design mais limpo. A navegação entre as páginas agora é mais intuitiva, garantindo uma experiência de usuário mais coesa.</p>
+                                <p class="card-text"><small class="text-muted">Postado em: Outubro de 2023</small></p>
+                            </div>
+                        </div>
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <h5 class="card-title">Rumo à Interatividade Total</h5>
+                                <p class="card-text">Nosso foco atual é dar vida ao player de música e enriquecer as páginas da comunidade. Queremos que o KingDomfy seja mais do que um layout bonito; queremos que ele seja uma ferramenta funcional e interativa para todos.</p>
+                                <p class="card-text"><small class="text-muted">Postado em: Outubro de 2023</small></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
