--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -6,12 +6,6 @@
     <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="../vendor/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../vendor/devicons/devicons.min.css">
-
-    <!-- HTML5Shiv -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <![endif]-->
-
     <link rel="stylesheet" type="text/css" href="../src/css/estilos-globais.css">
     <title>KingDomfy - Sobre Nós</title>
     <link rel="icon" href="../src/imagens/favicon.png">
@@ -52,68 +46,33 @@
     </header> 
 
     <section class="caixa">
-        <div class="container">
-            <div class="conteudo-interno">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2>Sobre Nós</h2>
-                        <p>O KingDomfy é uma plataforma de streaming de música que oferece milhões de músicas para você ouvir. Nossa missão é levar música para todos, em qualquer lugar.</p>
-                        <p>Fomos fundados em 2024 com a paixão de conectar artistas e fãs. Acreditamos no poder da música para unir pessoas e inspirar momentos inesquecíveis.</p>
-                        <p class="mt-4"><strong>Missão do Projeto:</strong> Este projeto foi construído com o propósito de demonstrar que interfaces complexas podem ser recriadas com precisão utilizando tecnologias fundamentais da web, servindo de base para estudos de UI/UX e performance.</p>
-                    </div>
-                </div>
-
-                <div class="row mt-5">
-                    <div class="col-md-12">
-                        <h2>Créditos e Reconhecimentos</h2>
-                        <p>O KingDomfy é o resultado de esforço técnico e inspiração em grandes players do mercado. Abaixo, os pilares que tornaram este projeto possível:</p>
-                        <table class="table table-dark table-striped mt-4">
-                            <thead>
-                                <tr>
-                                    <th scope="col">Atribuição</th>
-                                    <th scope="col">Responsável / Recurso</th>
-                                    <th scope="col">Descrição</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Arquitetura & Dev</td>
-                                    <td>DomisDev</td>
-                                    <td>Idealização, estruturação do código e implementação da lógica responsiva.</td>
-                                </tr>
-                                <tr>
-                                    <td>Identidade Visual</td>
-                                    <td>Spotify Inc.</td>
-                                    <td>Referência de Design System, paleta de cores e UX (User Experience).</td>
-                                </tr>
-                                <tr>
-                                    <td>Engine Gráfica</td>
-                                    <td>Bootstrap & CSS3</td>
-                                    <td>Fornecimento dos componentes de layout e estilização moderna.</td>
-                                </tr>
-                                <tr>
-                                    <td>Assets Visuais</td>
-                                    <td>Font Awesome & Devicons</td>
-                                    <td>Ícones de alta fidelidade que compõem a estética da interface.</td>
-                                </tr>
-                                <tr>
-                                    <td>Aprendizado</td>
-                                    <td>Comunidade Dev</td>
-                                    <td>Baseado em princípios de Clean Code e boas práticas de Front-end.</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="conteudo-interno">
+          <div class="row">
+            <div class="col-md-12 text-center">
+              <h2 class="mb-4">Sobre o KingDomfy</h2>
+              <p class="lead">O KingDomfy é mais do que um simples clone de player de música; é um projeto de código aberto criado para demonstrar o poder das tecnologias web modernas e fornecer uma base sólida para desenvolvedores que desejam criar suas próprias aplicações de streaming.</p>
             </div>
+          </div>
+          <div class="row mt-5">
+            <div class="col-md-6">
+              <h2>Nossa Missão</h2>
+              <p>Nossa missão é fornecer uma plataforma de aprendizado prático, onde desenvolvedores, desde iniciantes a experientes, possam explorar, modificar e aprimorar um projeto web completo. Acreditamos que a melhor forma de aprender é fazendo, e o KingDomfy oferece o playground perfeito para isso.</p>
+            </div>
+            <div class="col-md-6">
+              <h2>Nossa Visão</h2>
+              <p>Almejamos ser uma referência na comunidade de desenvolvimento como um exemplo de boas práticas, utilizando HTML, CSS e JavaScript de forma organizada e eficiente. Queremos inspirar novos projetos e contribuir para o crescimento do ecossistema de código aberto.</p>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
 
     <footer>
       <div class="container">
         <div class="row">
           <div class="col-lg-auto mb-4">
-            <h4>company</h4>
+            <h4>Company</h4>
             <ul class="navbar-nav">
               <li><a href="sobre.html">Sobre</a></li>
               <li><a href="empregos.html">Empregos</a></li>
@@ -122,7 +81,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>comunidades</h4>
+            <h4>Comunidades</h4>
             <ul class="navbar-nav">
               <li><a href="artistas.html">Artistas</a></li>
               <li><a href="desenvolvedores.html">Desenvolvedores</a></li>
@@ -130,7 +89,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>Links úteis</h4>
+            <h4>Links Úteis</h4>
             <ul class="navbar-nav">
               <li><a href="suporte.html">Suporte</a></li>
               <li><a href="player-da-web.html">Player da Web</a></li>
@@ -138,7 +97,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>site feito com:</h4>
+            <h4>Site feito com:</h4>
             <ul id="media">
               <li>
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco devicon-img" />
@@ -152,7 +111,7 @@
             </ul>
           </div>
           <div class="col-lg-auto mb-4">
-            <h4>site feito por:</h4>
+            <h4>Site feito por:</h4>
             <ul class="navbar-nav">
               <li>
                 <a href="https://github.com/Domisnnet/" target="_blank" class="navbar-link externo" id="dev">
@@ -165,17 +124,17 @@
             <h4>Redes Sociais:</h4>
             <ul class="social-media-icons">
               <li>
-                <a href="">
+                <a href="#">
                   <img src="../src/imagens/facebook.png" class="social-icon">
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <img src="../src/imagens/twitter.png" class="social-icon">
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <img src="../src/imagens/instagram.png" class="social-icon">
                 </a>
               </li>
