--- a/pages/suporte.html
+++ b/pages/suporte.html
@@ -49,9 +49,48 @@
         <div class="container">
             <div class="conteudo-interno">
                 <div class="row">
-                    <div class="col-md-12">
-                        <h2>Suporte</h2>
-                        <p>Página em construção. Em breve, você encontrará aqui respostas para as suas perguntas mais frequentes.</p>
+                    <div class="col-md-12 text-center">
+                        <h2 class="mb-4">Central de Ajuda</h2>
+                        <p class="lead">Precisa de ajuda? Você está no lugar certo. Encontre respostas para suas dúvidas e, se não encontrar o que procura, entre em contato conosco.</p>
+                    </div>
+                </div>
+                <div class="row mt-5">
+                    <div class="col-md-6">
+                        <h2>Perguntas Frequentes (FAQ)</h2>
+                        <div id="faqAccordion">
+                            <div class="card">
+                                <div class="card-header" id="headingOne">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                            O que é o KingDomfy?
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#faqAccordion">
+                                    <div class="card-body">
+                                        O KingDomfy é um projeto de código aberto que replica a interface do Spotify, criado para fins de estudo e portfólio.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header" id="headingTwo">
+                                    <h5 class="mb-0">
+                                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                            Como posso contribuir?
+                                        </button>
+                                    </h5>
+                                </div>
+                                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#faqAccordion">
+                                    <div class="card-body">
+                                        Você pode contribuir visitando nosso repositório no GitHub e seguindo nossas diretrizes de contribuição.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Ainda precisa de ajuda?</h2>
+                        <p>Se não encontrou a resposta que procurava, envie um e-mail para <a href="mailto:suporte@kingdomfy.com">suporte@kingdomfy.com</a> ou abra uma issue em nosso <a href="https://github.com/Domisnnet/KingDomfy/issues" target="_blank">repositório no GitHub</a>.</p>
                     </div>
                 </div>
             </div>
