--- a/index.html
+++ b/index.html
@@ -4,40 +4,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="KingDomfy - O seu clone de player de música favorito. Descubra novas músicas, crie playlists e aproveite o melhor do streaming.">
-
   <title>KingDomfy - Música para Todos</title>
   <link rel="icon" href="src/imagens/favicon.png">
-
   <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="vendor/fontawesome/css/all.min.css">
   <link rel="stylesheet" href="vendor/devicons/devicons.min.css">
   <link rel="stylesheet" type="text/css" href="src/css/estilos-globais.css">
 </head>
 
-<body id="home">
-  <header>
-    <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
-      <div class="container">
-        <a href="index.html" class="navbar-brand">
-          <img src="src/imagens/KingDomfy.png" width="100" alt="Logo KingDomfy">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-principal" aria-controls="nav-principal" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fas fa-bars text-white"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="nav-principal">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a href="pages/premium.html" class="nav-link">Premium</a></li>
-            <li class="nav-item"><a href="pages/ajuda.html" class="nav-link">Ajuda</a></li>
-            <li class="nav-item"><a href="pages/baixar.html" class="nav-link">Baixar</a></li>
-            <li class="nav-item divisor"></li>
-            <li class="nav-item"><a href="pages/inscrever-se.html" class="nav-link">Inscrever-se</a></li>
-            <li class="nav-item"><a href="pages/entrar.html" class="nav-link">Entrar</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-
+<body id="home" data-base="./">
+  <div id="header-placeholder"></div>
   <main>
     <section id="capa" class="capa">
       <div class="container">
@@ -64,7 +40,6 @@
         </div>
       </div>
     </section>
-
     <section id="servicos" class="caixa">
       <div class="container">
         <div class="row">
@@ -98,7 +73,6 @@
         </div>
       </div>
     </section>
-
     <section id="recursos" class="caixa">
       <div class="container">
         <div class="row">
@@ -125,91 +99,10 @@
       </div>
     </section>
   </main>
-
-<footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-auto mb-4">
-          <h4>Company</h4>
-          <ul class="navbar-nav">
-            <li><a href="pages/sobre.html">Sobre</a></li>
-            <li><a href="pages/empregos.html">Empregos</a></li>
-            <li><a href="pages/imprensa.html">Imprensa</a></li>
-            <li><a href="pages/novidades.html">Novidades</a></li>
-          </ul>
-        </div>
-  
-        <div class="col-lg-auto mb-4">
-          <h4>Comunidades</h4>
-          <ul class="navbar-nav">
-            <li><a href="pages/artistas.html">Para Artistas</a></li>
-            <li><a href="pages/desenvolvedores.html">Desenvolvedores</a></li>
-            <li><a href="pages/marcas.html">Marcas</a></li>
-          </ul>
-        </div>
-  
-        <div class="col-lg-auto mb-4">
-          <h4>Links Úteis</h4>
-          <ul class="navbar-nav">
-            <li><a href="pages/ajuda.html">Ajuda</a></li>
-            <li><a href="pages/player-da-web.html">Player da Web</a></li>
-            <li><a href="pages/aplicativo-movel-gratis.html">Aplicativo móvel grátis</a></li>
-          </ul>
-        </div>
-  
-        <div class="col-lg-auto mb-4">
-          <h4>Site feito com:</h4>
-          <ul id="media">
-            <li>
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain-wordmark.svg" class="espaco devicon-img" alt="HTML5">
-            </li>
-            <li>
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-plain-wordmark.svg" class="espaco devicon-img" alt="CSS3">
-            </li>
-            <li>
-              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-plain.svg" class="espaco devicon-img" alt="JavaScript">
-            </li>
-          </ul>
-        </div>
-  
-        <div class="col-lg-auto mb-4">
-          <h4>Site feito por:</h4>
-          <ul class="navbar-nav">
-            <li>
-              <a href="https://github.com/Domisnnet/" target="_blank" class="navbar-link externo" id="dev">
-                DomisDev
-              </a>
-            </li>
-          </ul>
-        </div>
-  
-        <div class="col-lg-auto mb-4 ml-lg-auto">
-          <h4>Redes Sociais</h4>
-          <ul class="social-media-icons">
-            <li>
-              <a href="#" aria-label="Facebook">
-                <img src="src/imagens/facebook.png" class="social-icon" alt="Facebook">
-              </a>
-            </li>
-            <li>
-              <a href="#" aria-label="Twitter">
-                <img src="src/imagens/twitter.png" class="social-icon" alt="Twitter">
-              </a>
-            </li>
-            <li>
-              <a href="#" aria-label="Instagram">
-                <img src="src/imagens/instagram.png" class="social-icon" alt="Instagram">
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
-  
+  <div id="footer-placeholder"></div>
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/popper/popper.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="src/js/app.js" defer></script>
+  <script src="src/js/template-loader.js" defer></script>
   </body>
-  </html>
+</html>
