--- a/pages/legal.html
+++ b/pages/legal.html
@@ -20,7 +20,7 @@
           <div class="col-md-12">
             <h2>Termos de Uso</h2>
             <p>Este projeto é um clone didático do Spotify e não possui fins lucrativos. O uso é restrito para fins educacionais.</p>
-            <h2>Política de Privacidade</h2>
+            <h2 id="privacy">Política de Privacidade</h2>
             <p>Não coletamos informações pessoais dos usuários.</p>
           </div>
         </div>
