--- a/pages/centro-de-privacidade.html
+++ b/pages/centro-de-privacidade.html
@@ -19,7 +19,7 @@
       <div class="conteudo-interno">
         <div class="row">
           <div class="col-md-12">
-            <h2>Centro de Privacidade</h2>
+            <h1>Centro de Privacidade</h1>
             <p>Sua privacidade é importante para nós. No KingDomfy, estamos comprometidos em proteger suas informações pessoais e em ser transparentes sobre como as usamos. Este Centro de Privacidade foi criado para fornecer a você informações claras e acessíveis sobre nossas práticas de privacidade.</p>
             
             <h2>Sua Privacidade em Primeiro Lugar</h2>
@@ -28,8 +28,8 @@
             <h2>Explore Nossas Políticas</h2>
             <p>Para entender melhor como coletamos, usamos e protegemos suas informações, consulte nossas políticas de privacidade e termos de uso:</p>
             <ul>
-              <li><a href="privacidade.html">Política de Privacidade</a>: Detalhes sobre os dados que coletamos, como os usamos e seus direitos.</li>
-              <li><a href="legal.html">Termos de Uso</a>: As regras e diretrizes para usar o KingDomfy.</li>
+              <li><a href="privacidade.html"class="link-interno">Política de Privacidade</a>: Detalhes sobre os dados que coletamos, como os usamos e seus direitos.</li>
+              <li><a href="legal.html"class="link-interno">Termos de Uso</a>: As regras e diretrizes para usar o KingDomfy.</li>
             </ul>
 
             <h2>Seus Direitos e Controles</h2>
@@ -39,10 +39,10 @@
               <li>Gerenciar suas preferências de comunicação.</li>
               <li>Excluir sua conta e dados associados.</li>
             </ul>
-            <p>Para mais informações sobre seus direitos, consulte nossa <a href="privacidade.html#lgpd">seção sobre a LGPD</a> em nossa Política de Privacidade.</p>
+            <p>Para mais informações sobre seus direitos, consulte nossa <a href="privacidade.html#lgpd"class="link-interno">seção sobre a LGPD</a> em nossa Política de Privacidade.</p>
 
             <h2>Fale Conosco</h2>
-            <p>Se tiver alguma dúvida ou preocupação sobre sua privacidade, entre em contato conosco através do nosso <a href="suporte.html">canal de suporte</a>.</p>
+            <p>Se tiver alguma dúvida ou preocupação sobre sua privacidade, entre em contato conosco através do nosso <a href="suporte.html"class="link-interno">canal de suporte</a>.</p>
           </div>
         </div>
       </div>
