--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -29,7 +29,7 @@
           </div>
           <div class="col-md-6">
             <h2>Entre em Contato</h2>
-            <p>Se você tem interesse em futuras parcerias, entre em contato conosco. Estamos abertos a discutir ideias e explorar como sua marca pode crescer com o KingDomfy. Envie um e-mail para <a href="mailto:parcerias@kingdomfy.com">parcerias@kingdomfy.com</a>.</p>
+            <p>Se você tem interesse em futuras parcerias, entre em contato conosco. Estamos abertos a discutir ideias e explorar como sua marca pode crescer com o KingDomfy. Envie um e-mail para <a href="mailto:parcerias@kingdomfy.com"class="link-interno">parcerias@kingdomfy.com</a>.</p>
           </div>
         </div>
       </div>
