--- a/pages/privacidade.html
+++ b/pages/privacidade.html
@@ -18,9 +18,7 @@
       <div class="conteudo-interno">
         <div class="row">
           <div class="col-md-12">
-            <h2>Política de Privacidade</h2>
-            <p><strong>Última atualização:</strong> 23 de maio de 2024</p>
-
+            <h1>Política de Privacidade</h1>
             <p>O KingDomfy ("nós", "nosso") é um projeto de clone didático do Spotify e está comprometido em proteger a sua privacidade. Esta Política de Privacidade explica como lidamos com as informações dos usuários em nosso site.</p>
 
             <h2>1. Informações que Coletamos</h2>
@@ -52,7 +50,7 @@
             <p>Podemos atualizar nossa Política de Privacidade de tempos em tempos. Notificaremos sobre quaisquer alterações, publicando a nova Política de Privacidade nesta página e atualizando a data da "Última atualização".</p>
 
             <h2>6. Fale Conosco</h2>
-            <p>Se tiver alguma dúvida sobre esta Política de Privacidade, entre em contato conosco através do nosso <a href="suporte.html">canal de suporte</a> ou visite nosso <a href="centro-de-privacidade.html">Centro de Privacidade</a>.</p>
+            <p>Se tiver alguma dúvida sobre esta Política de Privacidade, entre em contato conosco através do nosso <a href="suporte.html"class="link-interno">canal de suporte</a> ou visite nosso <a href="centro-de-privacidade.html"class="link-interno">Centro de Privacidade</a>.</p>
           </div>
         </div>
       </div>
