--- a/pages/legal.html
+++ b/pages/legal.html
@@ -18,7 +18,7 @@
       <div class="conteudo-interno">
         <div class="row">
           <div class="col-md-12">
-            <h2>Termos de Uso</h2>
+            <h1>Termos de Uso</h1>
             <p><strong>Última atualização:</strong> 23 de maio de 2024</p>
 
             <h2>1. Aceitação dos Termos</h2>
@@ -42,13 +42,13 @@
             <p>O Serviço é fornecido "como está" e "conforme disponível". O KingDomfy não oferece garantias de qualquer tipo, expressas ou implícitas, sobre a operação do Serviço ou as informações, conteúdo, materiais ou produtos incluídos no Serviço. Você concorda expressamente que o uso do Serviço é por sua conta e risco.</p>
 
             <h2>6. Limitação de Responsabilidade</h2>
-            <p>Em nenhuma circunstância o KingDomfy será responsável por quaisquer danos de qualquer tipo decorrentes do uso do Serviço, incluindo, mas não se limitando a, danos diretos, indiretos, incidentais, punitivos e consequenciais.</p>
+            <p>Em nenhuma circunstância o KingDomfy será responsável por quaisquer danos de qualquer tipo decorrentes douso do Serviço, incluindo, mas não se limitando a, danos diretos, indiretos, incidentais, punitivos e consequenciais.</p>
 
             <h2>7. Alterações nos Termos</h2>
             <p>O KingDomfy reserva-se o direito de alterar estes Termos a qualquer momento. A data da última atualização será sempre indicada no topo desta página. Recomendamos que você revise os Termos periodicamente para estar ciente de quaisquer alterações.</p>
 
             <h2>8. Contato</h2>
-            <p>Se você tiver alguma dúvida sobre estes Termos, entre em contato conosco através do nosso <a href="suporte.html">canal de suporte</a>.</p>
+            <p>Se você tiver alguma dúvida sobre estes Termos, entre em contato conosco através do nosso <a href="suporte.html" class="link-interno">canal de suporte</a>.</p>
           </div>
         </div>
       </div>
@@ -58,6 +58,7 @@
   <script src="../vendor/jquery/jquery.min.js"></script>
   <script src="../vendor/popper/popper.min.js"></script>
   <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
-  <script src="../src/js/template-loader.js" defer></script>
+  <script src="../src/js/app.js"></script>
+  <script src="../src/js/template-loader.js"></script>
 </body>
 </html>
