--- a/pages/legal.html
+++ b/pages/legal.html
@@ -19,7 +19,6 @@
         <div class="row">
           <div class="col-md-12">
             <h1>Termos de Uso</h1>
-            <p><strong>Última atualização:</strong> 23 de maio de 2024</p>
 
             <h2>1. Aceitação dos Termos</h2>
             <p>Ao acessar e usar o KingDomfy (doravante "Serviço"), você concorda em cumprir e estar vinculado a estes Termos de Uso. Se você não concordar com estes termos, não deverá usar o Serviço.</p>
@@ -32,11 +31,10 @@
 
             <h2>4. Uso Permitido</h2>
             <p>Você pode usar o Serviço apenas para fins pessoais e não comerciais. Você concorda em não:</p>
-            <ul>
-              <li>Modificar, copiar, distribuir, transmitir, exibir, executar, reproduzir, publicar, licenciar, criar trabalhos derivados, transferir ou vender qualquer informação, software, produto ou serviço obtido do Serviço.</li>
-              <li>Usar o Serviço para qualquer finalidade ilegal ou proibida por estes Termos.</li>
-              <li>Usar qualquer robô, spider, outro dispositivo automático ou processo manual para monitorar ou copiar qualquer conteúdo do Serviço.</li>
-            </ul>
+            <p>Modificar, copiar, distribuir, transmitir, exibir, executar, reproduzir, publicar, licenciar, criar trabalhos derivados, transferir ou vender qualquer informação, software, produto ou serviço obtido do Serviço.
+              Usar o Serviço para qualquer finalidade ilegal ou proibida por estes Termos.
+              Usar qualquer robô, spider, outro dispositivo automático ou processo manual para monitorar ou copiar qualquer conteúdo do Serviço.
+            </p>
 
             <h2>5. Isenção de Garantias</h2>
             <p>O Serviço é fornecido "como está" e "conforme disponível". O KingDomfy não oferece garantias de qualquer tipo, expressas ou implícitas, sobre a operação do Serviço ou as informações, conteúdo, materiais ou produtos incluídos no Serviço. Você concorda expressamente que o uso do Serviço é por sua conta e risco.</p>
