--- a/pages/centro-de-privacidade.html
+++ b/pages/centro-de-privacidade.html
@@ -27,18 +27,14 @@
 
             <h2>Explore Nossas Políticas</h2>
             <p>Para entender melhor como coletamos, usamos e protegemos suas informações, consulte nossas políticas de privacidade e termos de uso:</p>
-            <ul>
-              <li><a href="privacidade.html"class="link-interno">Política de Privacidade</a>: Detalhes sobre os dados que coletamos, como os usamos e seus direitos.</li>
-              <li><a href="legal.html"class="link-interno">Termos de Uso</a>: As regras e diretrizes para usar o KingDomfy.</li>
-            </ul>
+            <p><a href="privacidade.html"class="link-interno">Política de Privacidade</a>: Detalhes sobre os dados que coletamos, como os usamos e seus direitos.</p>
+            <p><a href="legal.html"class="link-interno">Termos de Uso</a>: As regras e diretrizes para usar o KingDomfy.</p>
 
             <h2>Seus Direitos e Controles</h2>
             <p>Entendemos que você deseja ter controle sobre suas informações. Oferecemos ferramentas e configurações para ajudá-lo a gerenciar sua privacidade e escolher como seus dados são usados. Você pode:</p>
-            <ul>
-              <li>Acessar e atualizar suas informações de perfil.</li>
-              <li>Gerenciar suas preferências de comunicação.</li>
-              <li>Excluir sua conta e dados associados.</li>
-            </ul>
+            <p>Acessar e atualizar suas informações de perfil.</p>
+            <p>Gerenciar suas preferências de comunicação.</p>
+            <p>Excluir sua conta e dados associados.</p>
             <p>Para mais informações sobre seus direitos, consulte nossa <a href="privacidade.html#lgpd"class="link-interno">seção sobre a LGPD</a> em nossa Política de Privacidade.</p>
 
             <h2>Fale Conosco</h2>
