--- a/pages/privacidade.html
+++ b/pages/privacidade.html
@@ -26,22 +26,18 @@
 
             <h2>2. Uso de Cookies e Armazenamento Local</h2>
             <p>Podemos usar cookies e tecnologias de armazenamento local para melhorar a experiência do usuário. Essas tecnologias são usadas para:</p>
-            <ul>
-              <li>Lembrar de suas preferências (como o volume do player).</li>
-              <li>Manter o estado da sua sessão de navegação.</li>
-            </ul>
+            <p>Lembrar de suas preferências (como o volume do player).</p>
+            <p>Manter o estado da sua sessão de navegação.</p>
             <p>Os dados armazenados são mantidos apenas no seu navegador e não são transmitidos para nossos servidores.</p>
 
             <h2 id="lgpd">3. Lei Geral de Proteção de Dados (LGPD)</h2>
             <p>O KingDomfy respeita os princípios da Lei Geral de Proteção de Dados (LGPD - Lei nº 13.709/2018) do Brasil. Embora não coletemos dados pessoais, reafirmamos nosso compromisso com a proteção de dados e a privacidade. Em conformidade com a LGPD, garantimos os seguintes direitos aos nossos usuários:</p>
-            <ul>
-              <li><strong>Direito de Confirmação e Acesso:</strong> Você tem o direito de confirmar se tratamos algum dado seu e de acessá-lo. Como não coletamos dados pessoais, podemos confirmar que nenhum dado seu é tratado por nós.</li>
-              <li><strong>Direito de Correção:</strong> Você pode corrigir dados incompletos, inexatos ou desatualizados. Como não há dados armazenados em nossos servidores, não há o que corrigir.</li>
-              <li><strong>Direito de Anonimização, Bloqueio ou Eliminação:</strong> Como não coletamos dados, não há o que anonimizar, bloquear ou eliminar.</li>
-              <li><strong>Direito à Portabilidade:</strong> Este direito não se aplica, pois não há dados a serem portados.</li>
-              <li><strong>Direito de Eliminação:</strong> Os dados de navegação e preferências podem ser eliminados por você ao limpar os dados do seu navegador.</li>
-              <li><strong>Direito à Informação:</strong> Fornecemos esta Política de Privacidade para informar sobre o tratamento (ou não tratamento) de dados.</li>
-            </ul>
+            <p><strong>Direito de Confirmação e Acesso:</strong> Você tem o direito de confirmar se tratamos algum dado seu e de acessá-lo. Como não coletamos dados pessoais, podemos confirmar que nenhum dado seu é tratado por nós.</p>
+            <p><strong>Direito de Correção:</strong> Você pode corrigir dados incompletos, inexatos ou desatualizados. Como não há dados armazenados em nossos servidores, não há o que corrigir.</p>
+            <p><strong>Direito de Anonimização, Bloqueio ou Eliminação:</strong> Como não coletamos dados, não há o que anonimizar, bloquear ou eliminar.</p>
+            <p><strong>Direito à Portabilidade:</strong> Este direito não se aplica, pois não há dados a serem portados.</p>
+            <p><strong>Direito de Eliminação:</strong> Os dados de navegação e preferências podem ser eliminados por você ao limpar os dados do seu navegador.</p>
+            <p><strong>Direito à Informação:</strong> Fornecemos esta Política de Privacidade para informar sobre o tratamento (ou não tratamento) de dados.</p>
 
             <h2>4. Links para Outros Sites</h2>
             <p>Nosso Serviço pode conter links para outros sites que não são operados por nós. Se você clicar em um link de terceiros, será direcionado para o site desse terceiro. Recomendamos vivamente que reveja a Política de Privacidade de todos os sites que visitar.</p>
