--- a/pages/baixar.html
+++ b/pages/baixar.html
@@ -24,19 +24,19 @@
         </div>
         <div class="row mt-4">
           <div class="col-md-4">
-            <a href="#" class="btn btn-lg btn-custom btn-roxo btn-block">
-              <i class="fab fa-windows mr-2"></i> Baixar para Windows
-            </a>
+            <button type="button" class="btn btn-lg btn-custom btn-roxo">
+              <i class="fab fa-windows"></i> Baixar para Windows
+            </button>
           </div>
           <div class="col-md-4">
-            <a href="#" class="btn btn-lg btn-custom btn-dark btn-block">
-              <i class="fab fa-apple mr-2"></i> Baixar para macOS
-            </a>
+            <button type="button" class="btn btn-lg btn-custom btn-dark">
+              <i class="fab fa-apple"></i> Baixar para macOS
+            </button>
           </div>
           <div class="col-md-4">
-            <a href="#" class="btn btn-lg btn-custom btn-secondary btn-block">
-              <i class="fab fa-linux mr-2"></i> Baixar para Linux
-            </a>
+            <button type="button" class="btn btn-lg btn-custom btn-secondary">
+              <i class="fab fa-linux"></i> Baixar para Linux
+            </button>
           </div>
         </div>
         <div class="row mt-5">
