--- a/pages/inscrever-se.html
+++ b/pages/inscrever-se.html
@@ -36,7 +36,7 @@
                 <label for="nome">Como devemos chamar você?</label>
                 <input type="text" class="form-control" id="nome" placeholder="Insira um nome de perfil.">
               </div>
-              <button type="submit" class="btn btn-custom btn-roxo">Inscrever-se</button>
+              <button type="submit" class="btn btn-primary">Inscrever-se</button>
             </form>
           </div>
         </div>
