--- a/pages/premium.html
+++ b/pages/premium.html
@@ -20,9 +20,9 @@
           <div class="col-md-12">
             <h2>Experimente o Premium e transforme sua experiência musical.</h2>
             <p>Ouça música sem anúncios, offline e com qualidade de som superior.</p>
-            <a href="" class="btn btn-lg btn-custom btn-roxo mt-3">
+            <button type="button" class="btn btn-lg btn-custom btn-roxo mt-3">
               COMECE SEU TESTE GRÁTIS
-            </a>
+            </button>            
             <p class="mt-3"><small>Oferta válida apenas para novos assinantes. Sujeito a termos e condições.</small></p>
           </div>
         </div>
