--- a/pages/player.html
+++ b/pages/player.html
@@ -15,42 +15,46 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
+          <h2 class="mb-5 fw-bold text-white">Tocando Agora</h2>
           <div class="player-container">
             <div class="album-art shadow">
-              <img src="https://via.placeholder.com/300/7F5AF0/FFFFFF?text=KingDomfy" alt="Capa do Álbum">
+              <img src="../src/imagens/capa-padrao.png" alt="Capa do Álbum">
             </div>
             <div class="song-details text-center mb-4">
-              <h4 class="mb-1 fw-bold text-white">Smooth Jazz Vibes</h4>
-              <p class="text-muted">Artista Exemplo</p>
+              <h4 class="mb-1 fw-bold text-white">Carregando...</h4>
+              <p class="text-muted">KingDomfy Hinos</p>
             </div>
             <div class="progress-wrapper mb-4">
               <div class="progress-bar-custom">
-                <div class="progress-fill" style="width: 35%;"></div>
+                <div class="progress-fill" style="width: 0%;"></div>
               </div>
-              <div class="time-info">
-                <span>1:45</span>
-                <span>3:30</span>
+              <div class="time-info d-flex justify-content-between mt-2">
+                <span id="currentTime" class="text-muted small">0:00</span>
+                <span id="totalDuration" class="text-muted small">0:00</span>
               </div>
             </div>
-            <div class="player-controls">
+            <div class="player-controls d-flex align-items-center justify-content-center">
               <button class="btn-control"><i class="fas fa-random"></i></button>
-              <button class="btn-control"><i class="fas fa-step-backward"></i></button>
+              
+              <button id="btnPrev" class="btn-control mx-3"><i class="fas fa-step-backward"></i></button>
+
               <button id="btnPlayPause" class="btn-main-player">
                 <svg id="svgPlay" width="70" height="70" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="30" cy="30" r="28.5" stroke="currentColor" stroke-width="3"/>
                   <path d="M41 30L25 20V40L41 30Z" fill="currentColor"/>
                 </svg>
-                <svg id="svgPause" width="70" height="70" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg id="svgPause" width="70" height="70" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg" style="display: none;">
                   <circle cx="30" cy="30" r="28.5" stroke="currentColor" stroke-width="3"/>
                   <rect x="22" y="19" width="5" height="22" rx="1" fill="currentColor"/>
                   <rect x="33" y="19" width="5" height="22" rx="1" fill="currentColor"/>
                 </svg>
               </button>
-              <button class="btn-control"><i class="fas fa-step-forward"></i></button>
+
+              <button id="btnNext" class="btn-control mx-3"><i class="fas fa-step-forward"></i></button>
+              
               <button class="btn-control"><i class="fas fa-redo"></i></button>
             </div>
-          </div>
-        </div>
+          </div></div>
       </div>
     </div>
   </main>
