--- a/pages/player.html
+++ b/pages/player.html
@@ -17,7 +17,7 @@
         <div class="col-md-12 text-center">
           <div class="player-container">
             <div class="album-art shadow">
-              <img src="../src/imagens/capa-padrao.png" alt="Capa do Álbum">
+              <img src="../src/imagens/melodias-da-alma.jpeg" alt="Capa do Álbum">
             </div>
             <div class="song-details text-center mb-4">
               <h4 class="mb-1 fw-bold text-white">Carregando...</h4>
