--- a/pages/player.html
+++ b/pages/player.html
@@ -60,5 +60,6 @@
   <script src="../vendor/jquery/jquery.min.js"></script>
   <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="../src/js/app.js" defer></script>
+  <script src="../src/js/template-loader.js" defer></script>
 </body>
 </html>
