--- a/pages/player.html
+++ b/pages/player.html
@@ -34,7 +34,7 @@
                 </div>
               </div>
               <div class="player-controls">
-                <button class="btn-control"><i class="fas fa-random"></i></button>
+                <button id="btnShuffle" class="btn-control"><i class="fas fa-random"></i></button>
                 <button id="btnPrev" class="btn-control"><i class="fas fa-step-backward"></i></button>
                 <button id="btnPlayPause" class="btn-main-player">
                   <svg id="svgPlay" width="60" height="60" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -48,7 +48,7 @@
                   </svg>
                 </button>
                 <button id="btnNext" class="btn-control"><i class="fas fa-step-forward"></i></button>
-                <button class="btn-control"><i class="fas fa-redo"></i></button>
+                <button id="btnRepeat" class="btn-control"><i class="fas fa-redo"></i></button>
               </div>
             </div>
           </div>
