--- a/pages/player.html
+++ b/pages/player.html
@@ -50,6 +50,11 @@
                 <button id="btnNext" class="btn-control"><i class="fas fa-step-forward"></i></button>
                 <button id="btnRepeat" class="btn-control"><i class="fas fa-redo"></i></button>
               </div>
+              <div class="volume-control">
+                <i class="fas fa-volume-down"></i>
+                <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="1">
+                <i class="fas fa-volume-up"></i>
+              </div>
             </div>
           </div>
         </div>
